examples/k8s/civo/vllm_pvc_civo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm
  labels:
    pod-security.kubernetes.io/enforce: privileged
